personalizando botoes, imagem do homem leao

--- a/Entre Caçadores, Colossos e Baldurianos/inicio.html
+++ b/Entre Caçadores, Colossos e Baldurianos/inicio.html
@@ -30,39 +30,50 @@
             <h2>Antes da palavra, veio a expressão</h2>
 
         <div class="homemLeao">
-            <div class="container"></div>
+          
+            <img src="./imagens/homem_leao.png">
               <p>Há 40 mil anos, houve a primeira obra de arte registrada pelo homem</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nostrum voluptate ducimus? Animi accusamus deleniti, amet autem quam consequuntur possimus exercitationem, blanditiis excepturi omnis eligendi facere laboriosam minima dolores incidunt.</p>
+          
             </div>
 
         </div>
 
     </div>
 
+    <div class="espaco"></div>
+
     <div class="bloodborne">
+        <div class="fundoMascarado"></div>
         <div class="container">
         <p class="nomeJogo">Bloodborne</p>
 
             <p class="descricaoJogo">Lorem ipsum dolor sit amet consectetur adipisicing elit. At quos quas quod aliquid. Vel, nemo alias voluptate et veritatis blanditiis facere amet laboriosam laborum unde quam recusandae molestiae tempora dolore!</p>
-            <button onclick="comecar()">Começar a caçada</button>
+            <button class="botao" onclick="comecar()">Começar a caçada</button>
         </div>
     </div>
+
+    <div class="espaco"></div>
+
 
     <div class="colossus">
-
+        <div class="fundoMascarado"></div>
         <div class="container">
             <p class="nomeJogo">SHADOW <span> OF THE </span> COLOSSUS</p>
-            <button onclick="ouvir()">Ouvir a Dormin</button>
-        </div>
 
+            <p class="descricaoJogo">Lorem ipsum dolor sit amet consectetur adipisicing elit. At quos quas quod aliquid. Vel, nemo alias voluptate et veritatis blanditiis facere amet laboriosam laborum unde quam recusandae molestiae tempora dolore!</p>
+            <button class="botao" onclick="ouvir()">Ouvir a Dormin</button>
+        </div>
     </div>
+
+    <div class="espaco"></div>
+
 
     <div class="bg3">
+        <div class="fundoMascarado"></div>
         <div class="container">
-        <img class="nomeJogopng" src="./imagens/logo-bg3.png" alt="">
+          <img class="nomeJogopng" src="./imagens/logo-bg3.png" alt="">
         </div>
-
-    </div>
+      </div>
 
 </div>
 
