finalizando (ou quase) a pagina inicial

--- a/Entre Caçadores, Colossos e Baldurianos/inicio.html
+++ b/Entre Caçadores, Colossos e Baldurianos/inicio.html
@@ -32,7 +32,10 @@
         <div class="homemLeao">
           
             <img src="./imagens/homem_leao.png">
-              <p>Há 40 mil anos, houve a primeira obra de arte registrada pelo homem</p>
+              <p class="descricaoJogo" >Há 40 mil anos, houve a primeira obra de arte registrada pelo homem. <br><br>
+                O Homem-Leão é a escultura mais antiga conhecida. Um exemplo de arte antropozoomórfica, inteiramente esculpida com ferramentas de pedra. <br><br>
+                Mais do que uma escultura, o Homem-Leão representa o primeiro registro do ser humano olhando além da sobrevivência. Pela primeira vez, tempo, energia e recursos foram dedicados não à caça, não à defesa, mas àquilo que só a mente humana é capaz de fazer: imaginar. Criar algo que não existe, unir homem e fera, e dar forma ao invisível. A arte nascia ali - como um reflexo do que somos por dentro. <br><br>
+                Assim como o Homem-Leão marcou o início da arte como forma de expressão, os jogos como Bloodborne, Shadow of the Colossus e Baldur's Gate 3 mostram como a tecnologia atual continua esse legado. Eles são exemplos de como ainda usamos tempo, esforço e criatividade para imaginar mundos, contar histórias e expressar sentimentos. Cada de uma maneira única diferente.</p>
           
             </div>
 
@@ -47,7 +50,10 @@
         <div class="container">
         <p class="nomeJogo">Bloodborne</p>
 
-            <p class="descricaoJogo">Lorem ipsum dolor sit amet consectetur adipisicing elit. At quos quas quod aliquid. Vel, nemo alias voluptate et veritatis blanditiis facere amet laboriosam laborum unde quam recusandae molestiae tempora dolore!</p>
+            <p class="descricaoJogo">“A mais antiga e mais forte emoção da humanidade é o medo, e o mais antigo e mais forte tipo de medo é o medo do desconhecido.” <br><br>
+            — H.P. Lovecraft
+            <br><br>
+            Não pense muito sobre tudo isso... Apenas vá e cace algumas feras.</p>
             <button class="botao" onclick="comecar()">Começar a caçada</button>
         </div>
     </div>
@@ -60,7 +66,10 @@
         <div class="container">
             <p class="nomeJogo">SHADOW <span> OF THE </span> COLOSSUS</p>
 
-            <p class="descricaoJogo">Lorem ipsum dolor sit amet consectetur adipisicing elit. At quos quas quod aliquid. Vel, nemo alias voluptate et veritatis blanditiis facere amet laboriosam laborum unde quam recusandae molestiae tempora dolore!</p>
+            <p class="descricaoJogo">Algumas terras não foram feitas para serem desbravadas, e ainda assim, é nelas que deixamos o que mais amamos. <br><br>
+            “A destruição é também uma forma de criação.”
+            <br><br>
+            — Graham Greene</p>
             <button class="botao" onclick="ouvir()">Ouvir a Dormin</button>
         </div>
     </div>
@@ -72,6 +81,12 @@
         <div class="fundoMascarado"></div>
         <div class="container">
           <img class="nomeJogopng" src="./imagens/logo-bg3.png" alt="">
+
+          <p class="descricaoJogo"> Dentre mais de 17 mil variações de destinos diferentes, qual será o seu? Role os dados e descubra. <br><br>
+            “Não somos apenas responsáveis pelo que fazemos, mas também pelo que deixamos de fazer.”
+            <br><br>
+            — Molière</p>
+            <button class="botao" onclick="ouvir()">Role os dados</button>
         </div>
       </div>
 
