iniciando a pagina de colossus, inserindo botao com audio e legenda

--- a/Entre Caçadores, Colossos e Baldurianos/inicio.html
+++ b/Entre Caçadores, Colossos e Baldurianos/inicio.html
@@ -86,7 +86,7 @@
             “Não somos apenas responsáveis pelo que fazemos, mas também pelo que deixamos de fazer.”
             <br><br>
             — Molière</p>
-            <button class="botao" onclick="ouvir()">Role os dados</button>
+            <button class="botao" onclick="rolar()">Role os dados</button>
         </div>
       </div>
 
@@ -94,3 +94,11 @@
 
 </body>
 </html>
+
+<script>
+
+function ouvir(){
+    window.location.href = "colossus.html";
+}
+
+</script>
