--- a/Entre Caçadores, Colossos e Baldurianos/inicio.html
+++ b/Entre Caçadores, Colossos e Baldurianos/inicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Entre Caçadores, Colossus e Baldurianos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -80,7 +80,7 @@
     <div class="bg3">
         <div class="fundoMascarado"></div>
         <div class="container">
-          <img class="nomeJogopng" src="./imagens/logo-bg3.png" alt="">
+          <img class="nomeJogopng" src="./imagens/bg3/logo-bg3.png" alt="">
 
           <p class="descricaoJogo"> Dentre mais de 17 mil variações de destinos diferentes, qual será o seu? Role os dados e descubra. <br><br>
             “Não somos apenas responsáveis pelo que fazemos, mas também pelo que deixamos de fazer.”
