--- a/Entre Caçadores, Colossos e Baldurianos/cadastro.html
+++ b/Entre Caçadores, Colossos e Baldurianos/cadastro.html
@@ -31,6 +31,9 @@
             <input id="confirmacao_senha_input" type="password" placeholder="******" />
           </div>
           <button class="botao">Cadastrar</button>
+          <div class="cadastrar">
+            <span>Já possui conta? <a href="login.html">Faça login!</a></span> 
+          </div>
         </div>
       </div>
     </div>
