--- a/Entre Caçadores, Colossos e Baldurianos/login.html
+++ b/Entre Caçadores, Colossos e Baldurianos/login.html
@@ -25,6 +25,9 @@
                         <input id="senha_input" type="password" placeholder="******">
                     </div>
                     <button class="botao">Entrar</button>
+                    <div class="cadastrar">
+                        <span>Não tem conta? <a href="cadastro.html">Cadastre-se!</a></span> 
+                    </div>
                 </div>
 
             </div>
