--- a/Entre Caçadores, Colossos e Baldurianos/inicio.html
+++ b/Entre Caçadores, Colossos e Baldurianos/inicio.html
@@ -101,4 +101,8 @@ function ouvir(){
     window.location.href = "colossus.html";
 }
 
+function comecar(){
+    window.location.href = "bloodborne.html";
+}
+
 </script>
